# admin2

./: .augment-guidelines  .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  celery_worker.py  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.redis.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.prod.sh  main.py  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.cursor/rules/: admin2.mdc
accounts/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile.py
common/: admin.py  models.py
common/migrations/: 0001_initial.py  0002_supplier_is_enabled.py
common/utils/: clickhouse.py  excel.py
config/: __init__.py  asgi.py  env.py  urls.py  wsgi.py
config/django_config/: base.py  logging.py  production.py  staging.py  test.py
config/third_party_config/: __init__.py  admin2.conf  celery.py  nginx.conf  postgres.initdb.sql
core/: context_processors.py  health.py  reporting.py  tests.py  urls.py  views.py
cross_dock/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
cross_dock/migrations/: 0001_initial.py  0002_alter_crossdocktask_created_at_taskcomment.py  0002_alter_crossdocktask_options_and_more.py
cross_dock/services/: __init__.py  clickhouse_service.py  excel_service.py
docs/: commands.md  containerization_plan.md  price_list_pipeline_documentation.md  project_overview.md
docs/cross_dock/: celery-redis-implementation-summary.md  celery-redis-implementation.md  mv-implementation-code-level.md  mv-implementation-db-level.md
docs/parser_plan/: 1. simplify (func list).md  2. simplify (high-level).md  3. simplify (tech plan).md  4. TDD Implementation Plan.md  parser complexity.md  parser-cross-dock separation.md
emex_upload/: README.md  apps.py  emex-upload-plan.md  forms.py  services.py  tasks.py  urls.py  views.py
nginx/: nginx.conf.template
parser/: cleanup.py  clickhouse_repo.py  excel_export.py  forms.py  http.py  parser_tech_plan.md  services.py  stparts.py  stparts_pipeline.py  tasks.py  types.py  urls.py  utils.py  views.py
parser/scripts/: check_proxies_for_stparts.py  check_stparts_direct.py  check_stparts_with_playwright.py
pricelens/: README.md  admin.py  api.py  apps.py  file_download_plan.md  models.py  pricelens_backend_plan.md  pricelens_blueprint.md  pricelens_frontend_plan.md  serializers.py  tasks.py  urls.py  urls_api.py  utils.py  views.py
pricelens/migrations/: 0001_initial.py  0001_pricelens_refactored.py  0002_failreason_investigation_fail_reason.py  0003_backfill_fail_reasons.py  0004_remove_investigation_error_id_and_more.py  0005_alter_cadenceprofile_bucket_and_more.py
tests/: conftest.py  factories.py  fixtures.py
tests/core/: test_reporting.py
tests/cross_dock/: conftest.py  factories.py  test_celery_views.py  test_integration.py  (+2 more)
(+52 files in other folders)
