[project]
name = "admin2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "clickhouse-driver>=0.2.9",
    "django>=5.2",
    "django-allauth>=65.7.0",
    "django-cleanup>=9.0.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "django-widget-tweaks>=1.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=4.1",
    "factory-boy>=3.3.3",
    "faker>=37.1.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.11.8",
    "werkzeug>=3.1.3",
]
